# liquifier

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.rust  PROCESS_FLOW.md  README.md  docker-compose.yml
config/: default.yml  production.yml
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: auth.rs  email.rs  jwt_middleware.rs  main.rs  routes.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: error.rs  lib.rs  pricing.rs  retry.rs  types.rs
crates/config/: Cargo.toml
crates/config/src/: chains.rs  lib.rs
crates/execution-engine/: Cargo.toml
crates/execution-engine/src/: impact.rs  main.rs  router.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: main.rs  parser.rs
crates/kms/: Cargo.toml
crates/kms/src/: crypto.rs  main.rs
crates/session-api/: Cargo.toml
crates/session-api/src/: main.rs  pools.rs
crates/websocket-service/: Cargo.toml
crates/websocket-service/src/: main.rs
db/: init.sql
engine/: Cargo.toml  Dockerfile
engine/src/: main.rs
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/public/[slug]/: page.tsx
frontend/app/sessions/[id]/: page.tsx
frontend/app/sessions/new/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Providers.tsx
frontend/hooks/: useSessionSocket.ts
frontend/lib/: api.ts  utils.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/refunds/: page.tsx
frontend/src/app/admin/users/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/my-dashboard/: page.tsx
frontend/src/app/sessions/[id]/: page.tsx
frontend/src/app/sessions/[id]/withdraw/: page.tsx
frontend/src/app/sessions/new/: page.tsx  page.tsx.bak
frontend/src/app/setup-2fa/: page.tsx
frontend/src/app/share/[slug]/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/verify-email/: page.tsx
frontend/src/app/verify-refund/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/ui/: button.tsx  card.tsx  copyable-address.tsx  input.tsx  navbar.tsx
frontend/src/hooks/: useSessionSocket.ts
frontend/src/lib/: api.ts  store.ts  types.ts  utils.ts
frontend/store/: authStore.ts
frontend/types/: index.ts
gateway/: Cargo.toml  Dockerfile  build.rs
gateway/src/: error.rs  main.rs
gateway/src/auth/: handlers.rs  mod.rs
gateway/src/middleware/: auth.rs
gateway/src/sessions/: mod.rs  session_handlers.rs  wallet_handlers.rs
indexer/: Cargo.toml  Dockerfile
indexer/src/: main.rs
kms/: Cargo.toml  Dockerfile
kms/src/: main.rs
migrations/: 20260101000000_init.sql  20260101000001_session_pools.sql  20260101000002_email_verify_sharing.sql  20260101000003_session_pools_unique.sql  20260101000004_pool_swap_path.sql  20260101000005_trades_idempotency_status.sql  20260101000006_user_roles_refunds.sql  20260101000007_deposits_table.sql  20260101000008_refund_usd_wallet_verify.sql  20260101000009_session_min_market_cap_trade_market_cap.sql  20260101000010_session_min_market_cap_default_50m.sql
proto/: liquifier.proto
sessions/: Cargo.toml  Dockerfile  build.rs
sessions/src/: main.rs
ws-metrics/: Cargo.toml  Dockerfile
ws-metrics/src/: main.rs
