[workspace]
resolver = "2"
members = [
    "crates/config",
    "crates/common",
    "crates/api-gateway",
    "crates/kms",
    "crates/session-api",
    "crates/indexer",
    "crates/execution-engine",
    "crates/websocket-service",
]

[workspace.dependencies]
# Config
liquifier-config = { path = "crates/config" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP / gRPC
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
    "migrate",
] }
redis = { version = "1.1.0", features = ["tokio-comp", "connection-manager"] }

# Web3
alloy = { version = "1.8.3", features = ["full"] }

# Message broker
async-nats = "0.47.0"

# Security
argon2 = "0.5"
totp-rs = { version = "5.6", features = ["gen_secret", "otpauth", "qr"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
aes-gcm = "0.10"
rand = "0.10.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
hex = "0.4"
base64 = "0.22"
futures = "0.3"
async-trait = "0.1"
dashmap = "6"
reqwest = { version = "0.12", features = ["json"] }
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }
