[package]
name    = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace        = true
axum.workspace         = true
tower-http.workspace   = true
tonic.workspace        = true
prost.workspace        = true
sqlx.workspace         = true
redis.workspace        = true
argon2.workspace       = true
totp-rs.workspace      = true
jsonwebtoken.workspace = true
serde.workspace        = true
serde_json.workspace   = true
uuid.workspace         = true
chrono.workspace       = true
thiserror.workspace    = true
anyhow.workspace       = true
tracing.workspace      = true
tracing-subscriber.workspace = true
dotenvy.workspace      = true
rand.workspace         = true
base64.workspace       = true

[build-dependencies]
tonic-build.workspace  = true
