[package]
name    = "sessions"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace              = true
tokio-stream.workspace       = true
tonic.workspace              = true
prost.workspace              = true
alloy.workspace              = true
sqlx.workspace               = true
serde.workspace              = true
serde_json.workspace         = true
uuid.workspace               = true
bigdecimal.workspace         = true
thiserror.workspace          = true
anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
dotenvy.workspace            = true
hex.workspace                = true

[build-dependencies]
tonic-build.workspace        = true
