[package]
name    = "ws-metrics"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace              = true
axum.workspace               = true
tower-http.workspace         = true
sqlx.workspace               = true
rdkafka.workspace            = true
serde.workspace              = true
serde_json.workspace         = true
uuid.workspace               = true
thiserror.workspace          = true
anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
dotenvy.workspace            = true
tokio-stream.workspace       = true
