[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
liquifier-config = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
alloy = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
