[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
liquifier-config = { workspace = true }
tokio = { workspace = true }
alloy = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
