[package]
name = "kms"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
liquifier-config = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
alloy = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
