[package]
name = "websocket-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
liquifier-config = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
